<resources>
    <string name="app_name">ExamApp</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="message">Message</string>
    <string name="p">p</string>
    <string name="q">q</string>
    <string name="e">e</string>
    <string name="calculate">Calculate</string>
    <string name="a">a</string>
    <string name="b">b</string>
    <string name="m">m</string>
    <string name="n">n</string>
    <string name="exp">exp</string>
    <string name="polynomial">x^2+x^1+2x^0</string>
    <string name="tab">\u0009\u0009\u0009\u0009</string>
    <string name="error">Something went wrong!\nTry again!</string>
    <string name="vector">01101</string>
    <string name="field">field</string>
    <string name="p1">p1</string>
    <string name="p2">p2</string>
    <string name="pnum">num of p</string>
    <string name="x2">x2</string>
    <string name="sum">+</string>
    <string name="g">g</string>
    <string name="x">x</string>
    <string name="k">k</string>
    <string name="mes_sig">Message/Signature</string>
    <string name="sign">Get Signature</string>
    <string name="verify_sign">Verify Signature</string>
    <string name="signature">Signature</string>
    <string name="clear">Clear</string>
    <string name="d">d</string>
    <string name="t">t</string>
    <string name="r">r</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
