<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ElGamalSignatureFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/el_sig_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/message"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/el_sig_signature"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/signature"
                android:inputType="textPersonName" />


            <EditText
                android:id="@+id/el_sig_p"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/p"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/el_sig_g"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/g"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/el_sig_x"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/x"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/el_sig_k"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/k"
                android:inputType="textPersonName" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="2">
                <Button
                    android:id="@+id/el_sig_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sign"
                    android:layout_weight="1"/>
                <Button
                    android:id="@+id/el_sig_verify"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/verify_sign"
                    android:layout_weight="1"/>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@android:color/darker_gray"/>

            <TextView
                android:id="@+id/el_sig_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text=""
                android:textSize="16sp" />

        </LinearLayout>
    </ScrollView>

</FrameLayout>