<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AsmuthBloomEnctyptFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@android:color/darker_gray"/>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/d"
                    android:id="@+id/asmuth_bloom_encrypt_d"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/sum"
                        android:id="@+id/asmuth_bloom_encrypt_add"/>
                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/clear"
                        android:id="@+id/asmuth_bloom_encrypt_clear"/>
                </LinearLayout>
            </LinearLayout>

            <EditText
                android:id="@+id/asmuth_bloom_encrypt_m"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/message"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/asmuth_bloom_encrypt_n"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/n"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/asmuth_bloom_encrypt_t"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/t"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/asmuth_bloom_encrypt_p"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/p"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/asmuth_bloom_encrypt_r"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/r"
                android:inputType="textPersonName" />

            <Button
                android:id="@+id/asmuth_bloom_encrypt_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/calculate" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@android:color/darker_gray"/>

            <HorizontalScrollView
                android:id="@+id/scrollView"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/asmuth_bloom_encrypt_textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:text=""
                    android:textSize="16sp" />

            </HorizontalScrollView>
        </LinearLayout>
    </ScrollView>

</FrameLayout>