<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ElGamalFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/el_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/message"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/el_p"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/p"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/el_g"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/g"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/el_x"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/x"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/el_k"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/k"
                android:inputType="textPersonName" />

            <Button
                android:id="@+id/el_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/calculate" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@android:color/darker_gray"/>

            <TextView
                android:id="@+id/el_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text=""
                android:textSize="16sp" />

        </LinearLayout>
    </ScrollView>


</FrameLayout>