<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DiffiHellmanFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/diffi_hellman_p"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/p"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/diffi_hellman_q"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/q"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/diffi_hellman_a"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/a"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/diffi_hellman_b"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/b"
                android:inputType="textPersonName" />

            <Button
                android:id="@+id/diffi_hellman_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/calculate" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@android:color/darker_gray"/>

            <TextView
                android:id="@+id/diffi_hellman_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text=""
                android:textSize="16sp" />

        </LinearLayout>
    </ScrollView>

</FrameLayout>